<resources>
    <string name="app_name">MyPhoneBook</string>
    <string name="phone_book">Phone Book</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="add_profile_photo">Add New Contact</string>
    <string name="add_profile_update_photo">Contact</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="star">+</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="call">Call</string>
    <string name="action_Delete">Delete</string>


</resources>